# day1

./: .gitignore  pyproject.toml
notebooks/: regression_lin.ipynb
